add news and banner
